--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <ul class="nav-ul" id="nav-ul">
                 <li><a href="#">Tutorials</a></li>
                 <li><a href="https://docs.python.org/3/">Python Docs</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="https://tdung939.github.io/sexy_coders_blog/">Blog</a></li>
                 <li><a href="#">About</a></li>
             </ul>
             <button class="Join-button" id="Join-button" onclick="window.location.href='#';">Contact</button>
